@@ -660,6 +660,9 @@ Changes
 				given from error to warning
 			Added -i flag when calling sendmail, suggested by
 				Michal Jaegermann <michal@harddata.com>
+0.81d	28/1/05:	Some error messages still talked about --internal
+			Scanmail not set warning is now only given if
+				DisableDefaultScanOptions is set
 
 INTERNATIONALISATION
 
